# serializer version: 1
# name: TestReadMember.test_do_not_verify_if_already_verified
  dict({
    'anonymousIds': None,
    'consent': dict({
      'consentMembers': False,
      'consentNetwork': False,
      'consentNews': False,
      'consentStudents': False,
    }),
    'createdAt': None,
    'email': 'fred@bloggs.com',
    'emailVerified': True,
    'emailVerifiedAt': '2021-01-01T00:00:00',
    'id': 'fred_bloggs',
    'phone': None,
    'yearOfGraduation': None,
  })
# ---
# name: TestReadMember.test_move_anonymous_submissions
  dict({
    'anonymousIds': list([
      '5f72853b-1cab-4e1c-98e2-bbff6b0cec5b',
    ]),
    'consent': dict({
      'consentMembers': False,
      'consentNetwork': False,
      'consentNews': False,
      'consentStudents': False,
    }),
    'createdAt': None,
    'email': 'fred@bloggs.com',
    'emailVerified': True,
    'emailVerifiedAt': '2021-01-01T00:00:00',
    'id': 'fred_bloggs',
    'phone': None,
    'yearOfGraduation': None,
  })
# ---
# name: TestReadMember.test_success_self_first_call
  dict({
    'anonymousIds': None,
    'consent': dict({
      'consentMembers': False,
      'consentNetwork': False,
      'consentNews': False,
      'consentStudents': False,
    }),
    'createdAt': None,
    'email': 'fred@bloggs.com',
    'emailVerified': True,
    'emailVerifiedAt': '2021-01-01T00:00:00',
    'id': 'fred_bloggs',
    'phone': None,
    'yearOfGraduation': None,
  })
# ---
# name: TestUpdateMember.test_success
  _Call(
    tuple(
      MemberModel(pk='fred_bloggs', sk='profile', name='Fred Bloggs', email='fred@bloggs.com', phone='01234567890', year_of_graduation=None, created_at=None, email_verified_at=None, consent=MemberConsentModel(consent_news=FakeDatetime(2021, 1, 1, 0, 0, tzinfo=datetime.timezone.utc), consent_network=FakeDatetime(2021, 1, 1, 0, 0, tzinfo=datetime.timezone.utc), consent_members=FakeDatetime(2021, 1, 1, 0, 0, tzinfo=datetime.timezone.utc), consent_students=FakeDatetime(2021, 1, 1, 0, 0, tzinfo=datetime.timezone.utc)), anonymous_ids=None),
    ),
    dict({
    }),
  )
# ---
